--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,6 +1,6 @@
 <body>
 <form method = "POST" action = "/articles/<%=@id%>">
-<input id ="hidden" type ="hidden" name ="_method" value ="PATCH">
+<input id ="hidden" type ="hidden" name ="_method" value ="PUTS">
 <input type="text" name ="title">
 <input type="text" name ="content">
 <input type="submit">
