--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -3,5 +3,9 @@
 <li><%= @article.title%></li>
 <li><%= @article.content%></li>
 </ul>
-<input type="submit">
+
+<form method = "POST" action = "/articles/<%=@id%>">
+<input id ="hidden" type ="hidden" name ="_method" value ="DELETE">
+<input type="submit" value = "delete">
+
 </body>
