--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -5,7 +5,7 @@
     </head>
     <body>
         <form method="POST" action="/articles/<%=@article.id%>">
-        <input type='hidden' name='_method' value='PUT'>
+        <input type='hidden' name='_method' value='PATCH'>
         <label for="title">Title</label>
         <input type="text" name="title" value = <%=@article.title%>>
         <label for="content">Content</label>
