--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -6,10 +6,10 @@
     <body>
 <h1>Create a New Article</h1>
 <form method="POST" action="/articles">
-    <label for="Title">Title</label>
-    <input type="text" name="Title">
-    <label for="Content">Content</label>
-    <input type="text" name="Content">
+    <label for="title">Title</label>
+    <input type="text" name="title">
+    <label for="content">Content</label>
+    <input type="text" name="content">
     <input type="submit" value="submit">
 </form>
 </body>
